<resources>
    <string name="app_name">OrgTaskSystem</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="ots">OTS</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="user_name">Username</string>
    <string name="title_activity_create_team">CreateTeamActivity</string>
    <string name="team_name">Team Name:</string>
    <string name="enter_team_name">Enter Team Name</string>
    <string name="done">Done</string>
    <string name="description">Description</string>
    <string name="add_task">Add Task</string>
    <string name="title_activity_create_task2">CreateTaskActivity2</string>
    <string name="title_activity_create_edit_task">CreateEditTaskActivity</string>
    <string name="title_activity_report_task_status">ReportTaskStatusActivity</string>

    <string-array name="accept_status_array">
        <item>WAITING</item>
        <item>ACCEPT</item>
        <item>REJECT</item>
    </string-array>

    <string-array name="task_status_array">
        <item>WAITING</item>
        <item>PENDING</item>
        <item>DONE</item>
    </string-array>

    <string-array name="task_location_array">
        <item>Shenkar</item>
        <item>Raanana</item>
        <item>Work</item>
        <item>Home</item>
    </string-array>

    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="cleaning">Cleaning</string>
    <string name="electricity">Electricity</string>
    <string name="computers">Computers</string>
    <string name="general">General</string>
    <string name="title_activity_maps">Map</string>
    <string name="add">Add</string>
    <string name="action_sync">action_sync</string>

    <string name="parse_app_id">irUzywS69MpTb5AXjCsamv3vUr7Oh39xzkZJzkto</string>
    <string name="parse_client_key">rTbKss08HgSA1zrhmSCVPPsn989IlaJsmK1OWRNY</string>
    <string name="hadasanddavid">Hadas Nadan David Kahan</string>
    <string name="otsversion">OTS 1.0</string>
    <string name="about">About</string>
    <string name="logoutologin">Logout/Login</string>
    <string name="addmember">ADD MEMBER</string>
    <string name="manageTeam">Manage Team</string>
    <string name="defaultCheck"><![CDATA[Check for new tasks every <5> minutes]]></string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="start">Start</string>

    <string-array name="minutes">
        <item>5</item>
        <item>7</item>
        <item>10</item>
    </string-array>

</resources>
