<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_bg"
    tools:context="com.mycompany.demoapp.LoginActivity">


    <LinearLayout
        android:padding="50dp"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">
        <TextView
            android:paddingLeft="90dp"
            android:text="OTS"
            android:textSize="50dp"
            android:textColor="#c2c3c8"
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="30dp"/>

        <EditText
            android:id="@+id/memberName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/textbox"
            android:hint="@string/user_name"
            android:textSize="18dp"
            android:padding="10dp" />

        <EditText
            android:id="@+id/memberEmail"
            android:inputType="textEmailAddress"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/textbox"
            android:hint="Email"
            android:textSize="18dp"
            android:padding="10dp"/>


        <EditText
            android:id="@+id/memberPass"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/textbox"
            android:hint="@string/password"
            android:textSize="18dp"
            android:padding="10dp"
            android:inputType="textPassword"/>


        <Button
            android:id="@+id/login_btnLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:padding="10dp"
            android:background="@color/colorAccent"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:onClick="login"/>

    </LinearLayout>
</RelativeLayout>
