<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".views.CreateEditTaskActivity"
    tools:showIn="@layout/activity_create_edit_task">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Task Description:"
                android:id="@+id/textDescription" />

            <EditText
                android:inputType="textEmailAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/taskDescription"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:hint="Drink Coffee" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Task Category:"
                android:id="@+id/textView3" />

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RadioButton android:id="@+id/radio_cleaning"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cleaning"
                    android:onClick="onCategoryRadioButtonClicked"/>
                <RadioButton android:id="@+id/radio_electricity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/electricity"
                    android:onClick="onCategoryRadioButtonClicked"/>
                <RadioButton android:id="@+id/radio_computers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/computers"
                    android:onClick="onCategoryRadioButtonClicked"/>
                <RadioButton android:id="@+id/radio_general"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/general"
                    android:onClick="onCategoryRadioButtonClicked"/>
            </RadioGroup>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Task Priority:"
                android:id="@+id/textView4" />
            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton android:id="@+id/radio_urgent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Urgent"
                    android:onClick="onPriorityRadioButtonClicked"/>
                <RadioButton android:id="@+id/radio_normal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Normal"
                    android:onClick="onPriorityRadioButtonClicked"/>
                <RadioButton android:id="@+id/radio_low"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Low"
                    android:onClick="onPriorityRadioButtonClicked"/>
            </RadioGroup>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Task Location:"
                android:id="@+id/textView5" />

            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Task Due Date:" />

                <TextView
                    style="@android:style/Widget.DeviceDefault.Light.Spinner"
                    android:textSize="12sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvDate"
                    android:onClick="showDatePickerDialog"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Task Due Time:" />
                <TextView
                    style="@android:style/Widget.DeviceDefault.Light.Spinner"
                    android:textSize="12sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvTime"
                    android:onClick="showTimePickerDialog"/>
            </LinearLayout>
            <TextView
                android:layout_marginTop="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Assigned Team Member Email:" />
            <EditText
                android:inputType="textEmailAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/assignedTeamMemberEmail"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:hint="someone@company.com" />

            <Button
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Save"
                android:id="@+id/button"
                android:layout_gravity="center_horizontal"
                android:onClick="save"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
